# assignment-5-Mustbhr

./: CMakeLists.txt
shaders/: fragment.fs  vertex.vs
src/: CS247_prog.cpp  CS247_prog.h
